[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "etest"
version = "1.1.0"
description = "You can use etest to locally test installs of Gentoo ebuilds using Docker."
authors = [
  "Alex Brandt <alunduil@gmail.com>",
]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/alunduil/etest"
keywords = [
  "ebuild",
  "emerge",
  "gentoo",
  "portage",
  "test",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  'Intended Audience :: Developers',
  'Intended Audience :: System Administrators',
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: Implementation :: CPython',
  'Topic :: Software Development :: Quality Assurance',
  'Topic :: Software Development :: Testing',
  'Topic :: Utilities',
]

[tool.poetry.dependencies]
click = "^8.0.1"
docker = "^5.0.0"
ply = "^3.11"
python = "^3.8"

[tool.poetry.dev-dependencies]
coveralls = "^2.1.1"
hypothesis = "^5.37.3"
pip = "^20.2.4"
pre-commit = "^2.7.1"
pytest = "^6.1.1"
pytest-cov = "^2.10.0"
vulture = "^2.0"

[tool.poetry.scripts]
etest = "etest:etest"
etest-build = "etest.build:main"

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=etest --cov-report=term-missing"
testpaths = [
  "etest_test",
]
