[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry]
name = "etest"
version = "1.1.0"
description = "You can use etest to locally test installs of Gentoo ebuilds using Docker."
authors = [
  "Alex Brandt <alunduil@gmail.com>",
]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/alunduil/etest"
keywords = [
  "ebuild",
  "emerge",
  "gentoo",
  "portage",
  "test",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  'Intended Audience :: Developers',
  'Intended Audience :: System Administrators',
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: Implementation :: CPython',
  'Topic :: Software Development :: Quality Assurance',
  'Topic :: Software Development :: Testing',
  'Topic :: Utilities',
]

[tool.poetry.dependencies]
click = "^8.1.3"
docker = "^6.0.1"
ply = "^3.11"
python = "^3.8"

[tool.poetry.group.dev.dependencies]
coveralls = "^3.3.1"
hypothesis = "^6.58.1"
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
sphinx-rtd-theme = "^1.1.1"
pylint = "^2.15.6"
pytest-golden = "^0.2.2"
pytest-xdist = {extras = ["psutil"], version = "^3.2.1"}

[tool.poetry.scripts]
etest = "etest:etest"
etest-build = "etest.build:main"

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=etest --cov-report=term-missing -n logical"
testpaths = [
  "etest_test",
]
enable_assertion_pass_hook = true

[tool.vulture]
paths = ["etest"]
min_confidence = 61
exclude = ["etest/__init__.py"]
